--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,7 @@
   height: 20px;
   background: #4e54c8;
   animation: animate 25s linear infinite;
-  bottom: -150px;
+  top: -150px;
   
 }
 
@@ -107,12 +107,18 @@
 
   0%{
       transform: translateY(0) rotate(0deg);
-      opacity: 1;
+      opacity: 0;
       border-radius: 0;
   }
 
+  50%{
+      transform: translateY(500px) rotate(360deg);
+      opacity: 1;
+      border-radius: 25%;
+  }
+
   100%{
-      transform: translateY(-1000px) rotate(720deg);
+      transform: translateY(1000px) rotate(720deg);
       opacity: 0;
       border-radius: 50%;
   }
